# adaptive-sph

./: .gitignore  Cargo.toml  README.md  default-config-web.yaml  default-config.yaml  default-scene-web.yaml  default-scene.yaml  semi-analytic-boundary-handling-terms.maxima  split-patterns.yaml
media/: .gitignore  boundary-handling.yaml  constant-field.yaml  density.yaml  distance-to-neighbor.yaml  hybrid-dfsph-artifacts-video.yaml  hybrid-dfsph-artifacts.yaml  iisph-explosions.yaml  motivation-images.yaml  motivation-performance-chart.py  motivation-scene.yaml  motivation-scene2.yaml  motivation-video.yaml  motivation.yaml  neighbor-numbers.yaml  only-divergence-free.yaml  ratio-stress-test-scene.yaml  ratio-stress-test-video.yaml  ratio-stress-test.yaml  render-test.yaml  resampling-gravity-free-scene.yaml  resampling-gravity-free.yaml  resampling-hybrid-dt.yaml  resampling-hybrid-dt2.yaml  scene-nearly-rest.yaml  scene-ratio2to1.yaml  sizing-function.yaml  smooth-transition.yaml  surface-boundary-type.yaml  surface-detection.yaml  surface-distance.yaml  video-default.yaml  video-viscosity.yaml  winchenbach-iisph-instabilities.yaml  winchenbach-instable-scene.yaml
src/: lib.rs  main.rs
src/platform/: mod.rs
src/platform/desktop/: main_loop.rs  mod.rs  rendering.rs  video_encoder.rs  vtk_exporter.rs
src/platform/web/: mod.rs  web_loop.rs  webgl_renderer.rs
src/simulation/: color_map.rs  colors.rs  concurrency.rs  mod.rs  neighborhood_search.rs  properties_window.rs  simulation.rs  simulation_parameters.rs  sph_kernels.rs  thread_safe_ptr.rs
web/: index.html
(+17 files in other folders)
