[package]
name = "adaptive-sph"
version = "0.1.0"
authors = ["kaegi <kaegi.dev@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = true

[dependencies]
nalgebra = {version = "0.26.2", features = ["serde-serialize"] }
num-traits = "0.2.14"
rand = "0.8.5"
rayon = "1.5.1"
# scoped_threadpool = "0.1.9"
# crossbeam = "0.8.1"
# crossbeam-utils = "0.8.5"
clap = "2.33.3"
serde = "1.0.130"
byteorder = "1.4.3"
enum_dispatch = "0.3.7"
rstar = "0.9.2"
egui = "0.19.0"
eframe = "0.19.0"
serde_yaml = "0.8.24"
svg = "0.10.0"
png = "0.17.5"

[features]
double-precision = []
uniform-particle-sizes = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vtkio = "0.6.3"
sdl2 = {version = "0.35.2", features = ["gfx", "unsafe_textures"] }
cairo-rs = { version = "0.16.1", features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
once_cell = "1.15.0"
send_wrapper = "0.6.0"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlShader',
  'CssStyleDeclaration',
  'Window',
  'Touch',
  'TouchList',
  'WebGlFramebuffer'
]
